syntax = "proto3";

package distributedlog.rpc;

import "distributedlog/protocol/messages/log.proto";

// Raft consensus service
service ConsensusService {
  // Request votes for leader election
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  
  // Append entries (heartbeat and log replication)
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  
  // Install snapshot
  rpc InstallSnapshot(stream InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

// Raft RequestVote RPC
message RequestVoteRequest {
  int32 term = 1;
  int32 candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

// Raft AppendEntries RPC
message AppendEntriesRequest {
  int32 term = 1;
  int32 leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
  int64 match_index = 3;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  bytes command = 3;  // Serialized command
  string command_type = 4;
}

// Raft InstallSnapshot RPC
message InstallSnapshotRequest {
  int32 term = 1;
  int32 leader_id = 2;
  int64 last_included_index = 3;
  int64 last_included_term = 4;
  int64 offset = 5;
  bytes data = 6;
  bool done = 7;
}

message InstallSnapshotResponse {
  int32 term = 1;
}
